gitops/platform-apps/loki/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`loki.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: loki
          port: 3100
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-wiredoor
  namespace: monitoring
spec:
  entryPoints:
    - webwiredoor
  routes:
    - kind: Rule
      match: Host(`loki.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: loki
          port: 3100
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-tailscale
  namespace: monitoring
spec:
  entryPoints:
    - webtailscale
  routes:
    - kind: Rule
      match: Host(`loki.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: loki
          port: 3100
  tls: {}
